--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -11,8 +11,8 @@ Config
 @import "mixins/_state";
 
 @import "config/c-colors";
+@import "config/c-scales";
 @import "config/c-units";
-@import "config/c-dimensions";
 @import "config/c-fonts";
 @import "config/c-transitions";
 @import "config/c-bourbon";
