JADE Fixed _hero partial

--- a/app/assets/jade/partials/_hero.jade
+++ b/app/assets/jade/partials/_hero.jade
@@ -1,5 +1,5 @@
 section(data-name="hero")
-  h4.t-h4 Hero
+  h4.t-h4 Normal Hero
   .o-hero--normal
     .o-hero__overlay
       .o-hero__content
@@ -9,8 +9,8 @@ section(data-name="hero")
       img.o-hero__image(src="http://unsplash.it/640/360/?image=1", alt="unsplash.it")
 
   h4.t-h4 Centered Hero
-  .o-hero--normal
-    .o-hero__overlay--center
+  .o-hero--center
+    .o-hero__overlay
       .o-hero__content
         h2.t-h2: +dummy(2, "words")
         p: +dummy("10", "text")
