--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -9,6 +9,7 @@ Config
 @import "mixins/_center";
 @import "mixins/_color";
 @import "mixins/_state";
+@import "mixins/_offset";
 
 @import "config/c-colors";
 @import "config/c-scales";
