--- a/app/assets/scss/guide.scss
+++ b/app/assets/scss/guide.scss
@@ -1,26 +1,4 @@
-/*
-
-Config
-
-*/
-@import "bourbon";
-
-@import "mixins/_helpers";
-@import "mixins/_center";
-@import "mixins/_color";
-@import "mixins/_state";
-@import "mixins/_offset";
-
-@import "config/c-colors";
-@import "config/c-scales";
-@import "config/c-units";
-@import "config/c-fonts";
-@import "config/c-transitions";
-@import "config/c-bourbon";
-
-@import "neat";
-
-@import "vendor/neat";
+@import "_shared";
 
 /*
 
