SCSS Massive rewrite of config files using maps
Enabling dynamic documentation in styleguide.

--- a/app/assets/scss/config/c-fonts.scss
+++ b/app/assets/scss/config/c-fonts.scss
@@ -9,4 +9,4 @@ $font__sans--bold: bold;
 $default__size: $base-1;
 $default__family: $font__sans;
 $default__weight: $font__sans--regular;
-$default__leading: $spacing--b;
+$default__leading: $leading--b;
