--- a/app/assets/scss/mixins/_color.scss
+++ b/app/assets/scss/mixins/_color.scss
@@ -1,16 +1,23 @@
-// RGBA fallback.
-@mixin rgba ($property, $color, $opacity) {
-  #{$property}: $color;
-  #{$property}: rgba($color, $opacity);
-}
-
 // HSB to HSLA.
-@function hsb ($h-hsb, $s-hsb, $b-hsb, $a: 1) {
+@function hsb($h-hsb, $s-hsb, $b-hsb, $a: 1) {
+
   @if $b-hsb == 0 {
-    @return hsla(0, 0, 0, $a)
+
+    @return hsla(0, 0, 0, $a);
+
   } @else {
+
     $l-hsl: ($b-hsb / 2) * (2 - ($s-hsb / 100));
     $s-hsl: ($b-hsb * $s-hsb) / if($l-hsl < 50, $l-hsl * 2, 200 - $l-hsl * 2);
     @return hsla($h-hsb, $s-hsl, $l-hsl, $a);
+
   }
+
+}
+
+// Retrieve a shade key from a palette map.
+@function chroma($key: 1, $shade: 500) {
+  $group: nth($color-palette, $key + 1);
+
+  @return map-get(nth($group, 2), $shade);
 }
